--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -850,7 +850,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 #i_983a_1{font-size: 15px ;color: #96a2b8 ;margin-left: 18px ;margin-right: 6px ;}
 #img_983a_0{margin-bottom: 13px;}
 #span_983a_0{font-size: 14px; font-weight: 500;}
-#div_983a_0{background-image: url(../upload/about-title-bg.jpg) ;}
+#div_983a_0{background-image: url(../upload/slider.jpg) ;}
 #div_983a_1{padding-top: 460px ;padding-bottom: 60px ;}
 #div_983a_2{font-size: 21px ;font-weight: 400 ;letter-spacing: 0px ;}
 #h1_983a_0{font-size: 48px ;font-weight: 700 ;text-transform: none ;letter-spacing: 0px ;color: #ffffff ;}
