--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -680,7 +680,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 #gdlr-core-wrapper-2{margin-left: auto;margin-right: auto;padding: 0px 0px 85px 0px;max-width: 1320px ;}
 #div_1dd7_13{background-size: cover ;background-position: center ;}
 #div_1dd7_14{min-height: 450px ;}
-#div_1dd7_15{background-image: url(../upload/apply.jpg) ;background-size: cover ;background-position: center ;}
+#div_1dd7_15{background-image: url(../upload/gallery4.jpg) ;background-size: cover ;background-position: center ;}
 #div_1dd7_16{padding: 80px 70px 55px 55px;}
 #div_1dd7_17{background-image: url(../upload/apply2.png) ;background-size: cover ;background-position: center ;}
 #div_1dd7_18{padding-bottom: 20px ;}
