--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -850,9 +850,9 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 #i_983a_1{font-size: 15px ;color: #96a2b8 ;margin-left: 18px ;margin-right: 6px ;}
 #img_983a_0{margin-bottom: 13px;}
 #span_983a_0{font-size: 14px; font-weight: 500;}
-#div_983a_0{background-image: url(../upload/slider.jpg) ;}
+#div_983a_0{background-image: url(../upload/home-header.jpg) ;}
 #div_983a_1{padding-top: 460px ;padding-bottom: 60px ;}
-#div_983a_2{font-size: 21px ;font-weight: 400 ;letter-spacing: 0px ;}
+#div_983a_2{font-size: 21px ;font-weight: 400 ;letter-spacing: 0px ; color: white;} 
 #h1_983a_0{font-size: 48px ;font-weight: 700 ;text-transform: none ;letter-spacing: 0px ;color: #ffffff ;}
 #div_983a_3{padding: 40px 0px 30px 0px;}
 #div_983a_4{padding-bottom: 15px ;}
@@ -863,18 +863,18 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 #div_983a_8{text-transform: none ;}
 #div_983a_9{padding: 90px 0px 40px 0px;}
 #div_983a_10{background-color: #192f59 ;}
-#div_983a_11{opacity: 0.5 ;background-image: url(../upload/coming-soon.jpg) ;background-size: cover ;background-position: center ;}
+#div_983a_11{opacity: 0.5 ;background-image: url(../upload/classroom.png) ;background-size: cover ;background-position: center ;}
 #div_983a_12{border-width: 0px;}
 #div_983a_13{padding-bottom: 25px ;}
-#h3_983a_1{font-size: 18px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;color: #000e27 ;}
+#h3_983a_1{font-size: 18px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;color: white ;}
 #div_983a_14{font-size: 16px ;text-transform: none ;color: #ffffff ;}
 #div_983a_15{border-width: 0px;}
 #div_983a_16{padding-bottom: 25px ;}
-#h3_983a_2{font-size: 18px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;color: #000e27 ;}
+#h3_983a_2{font-size: 18px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;color: white ;}
 #div_983a_17{font-size: 16px ;text-transform: none ;color: #ffffff ;}
 #div_983a_18{border-width: 0px;}
 #div_983a_19{padding-bottom: 25px ;}
-#h3_983a_3{font-size: 18px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;color: #000e27 ;}
+#h3_983a_3{font-size: 18px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;color: white ;}
 #div_983a_20{font-size: 16px ;text-transform: none ;color: #ffffff ;}
 #div_983a_21{padding: 0px 0px 0px 0px;}
 #div_983a_22{background-color: #f2f2f2 ;}
@@ -884,10 +884,10 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 #div_983a_26{padding-bottom: 25px ;}
 #h3_983a_4{font-size: 30px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;}
 #div_983a_27{font-size: 17px ;text-transform: none ;}
-#div_983a_28{background-image: url(../upload/nathan-dumlao-572047-unsplash.jpg) ;background-size: cover ;background-position: center ;}
+#div_983a_28{background-image: url(../upload/why.jpg) ;background-size: cover ;background-position: center ;}
 #div_983a_29{padding: 0px 0px 0px 0px;}
 #div_983a_30{background-color: #f2f2f2 ;}
-#div_983a_31{background-image: url(../upload/shutterstock_400221589.jpg) ;background-size: cover ;background-position: center ;}
+#div_983a_31{background-image: url(../upload/gallery1.jpg) ;background-size: cover ;background-position: center ;}
 #div_983a_32{padding: 60px 0px 15px 85px;}
 #div_983a_33{background-color: #f2f2f2 ;}
 #div_983a_34{border-width: 0px;}
@@ -902,7 +902,7 @@ body .gdlr-core-flipbox-item .gdlr-core-flipbox-item-image {
 #div_983a_42{padding-bottom: 25px ;}
 #h3_983a_6{font-size: 30px ;font-weight: 600 ;letter-spacing: 0px ;text-transform: none ;}
 #div_983a_43{font-size: 17px ;text-transform: none ;}
-#div_983a_44{background-image: url(../upload/shutterstock_547272460.jpg) ;background-size: cover ;background-position: center ;}
+#div_983a_44{background-image: url(../upload/gallery5.jpg) ;background-size: cover ;background-position: center ;}
 #div_983a_45{padding: 55px 0px 20px 0px;}
 #div_983a_46{background-color: #1b2434 ;}
 #div_983a_47{max-width: 1440px ;}
