--- a/css/kingster-style-custom.css
+++ b/css/kingster-style-custom.css
@@ -221,7 +221,7 @@ body.kingster-boxed .kingster-body-wrapper{ margin-top: 0px; margin-bottom: 0px;
 .kingster-not-found-wrap .kingster-not-found-background{ opacity: 0.27; } 
 .kingster-blog-title-wrap.kingster-style-custom .kingster-blog-title-content{ padding-top: 93px; } 
 .kingster-blog-title-wrap.kingster-style-custom .kingster-blog-title-content{ padding-bottom: 87px; } 
-.kingster-blog-title-wrap{ background-image: url(../upload/page-title.jpg); } 
+.kingster-blog-title-wrap{ background-image: url(../upload/classroom.png); } 
 .kingster-blog-title-wrap.kingster-feature-image .kingster-blog-title-top-overlay{ height: 242px; } 
 .kingster-blog-title-wrap.kingster-feature-image .kingster-blog-title-bottom-overlay{ height: 333px; } 
 .kingster-blog-title-wrap .kingster-blog-title-overlay{ opacity: 0.25; } 
