--- a/css/style-core.css
+++ b/css/style-core.css
@@ -6224,7 +6224,7 @@ body .tribe-bar-views-inner {
 	padding: 15px; 
 	width: 100%;
 	display: block; -webkit-appearance: none; 
-	background-color:#3db166; 
+	background-color:#0051ffad; 
 	border: 0;
 	color: #fff;
 	font-style: normal !important;
